Fixed search result img layout and responsiveness on logged in home page. Nav and footer still not responsive.

--- a/Frontend/src/Styles/_loggedInHome.scss
+++ b/Frontend/src/Styles/_loggedInHome.scss
@@ -8,7 +8,7 @@
 
 
     .helloUser {
-        font-size: 2rem;
+       
         font-weight: bold;
         margin-bottom: 1rem;
 
@@ -16,6 +16,3 @@
 
 }
 
-.logo-loggedin {
-    border-radius: 50px;
-}
